@@ -2,11 +2,11 @@ prefix = @prefix@
 includedir = @includedir@
 exec_prefix = @exec_prefix@
 libdir = @libdir@
+INSTALL = @INSTALL@
+INSTALL_DATA = @SWARM_INSTALL_DATA_@
 
-LIBRARY = $(libdir)/lib$(LIBNAME).a
-INCFILE = $(includedir)/$(LIBNAME).h
-INCLIB = $(includedir)/$(LIBNAME)
-INCINSTALLED=$(INCLIB)/.headers-install
+LIBRARY = lib$(LIBNAME).a
+INCFILE = $(LIBNAME).h
 
 RANLIB = @RANLIB@
 CC = @CC@
@@ -15,30 +15,20 @@ INCLUDES = -I$(includedir)
 
 .PHONY: install-headers install-lib
 
-all: install-headers install-lib
-install: install-headers install-lib
-install-headers: $(INCINSTALLED) $(INCFILE)
-install-lib: $(LIBRARY)
+all: $(LIBRARY)
 
-realclean: clean
-	-rm -f $(LIBRARY) $(INCDIR)/$(LIBNAME).h
-	-rm -rf $(INCLIB)
+install: install-headers install-lib
+
+install-headers: 
+	$(INSTALL_DATA) $(INCFILE) $(includedir)
+	test -d $(includedir)/$(LIBNAME) || mkdir $(includedir)/$(LIBNAME)
+	$(INSTALL_DATA) $(HEADERS) $(includedir)/$(LIBNAME)
+
+install-lib: $(LIBRARY)
+	$(INSTALL_DATA) $(LIBRARY) $(libdir)
 
 clean:
 	-rm -f core $(OBJECTS) $(OTHERCLEAN)
-
-$(INCFILE): $(LIBNAME).h
-	rm -f $(INCFILE)
-	cp -p $(LIBNAME).h $(INCFILE)
-
-# INCINSTALLED is a rule that touches a magic file to make sure that
-# installed headers are up to date. Unsubtle (if one .h file is changed,
-# it installs them all) but it seems to work.
-$(INCINSTALLED): $(HEADERS)
-	if [ ! -d $(INCLIB) ]; then mkdir $(INCLIB); fi
-	cd $(INCLIB); rm -f $(HEADERS)
-	if test -n "$(HEADERS)" ; then cp -p $(HEADERS) $(INCLIB) ; fi
-	touch $(INCINSTALLED)
 
 $(LIBRARY): $(OBJECTS)
 	-rm -f $@
