@@ -1,5 +1,10 @@
 1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
+	* Makefile.lib.in (INSTALL, INSTALL_DATA): Substitute from
+	INSTALL and SWARM_INSTALL_DATA_.
+	(all): Don't install by default.
+	(install-headers, install-lib): Update to use INSTALL_DATA.
+
 	* Makefile.appl.in (INSTALL_PROGRAM): Set INSTALL_PROGRAM to
 	@SWARM_INSTALL_PROGRAM@.
 	(INSTALL): Substitute.
